Compiladores 2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    ASSIGMENT
    BOOLEAN
    COLON
    DEF
    EXTENDS
    FALSE
    INT
    LENGTH
    NEW
    NULL
    NUMBER
    POINT
    THIS
    TRUE

Grammar

Rule 0     S' -> PROG
Rule 1     PROG -> PUBLIC CLASS ID LCBRA PUBLIC STATIC VOID MAIN LPAR STRING LSBRA RSBRA ID RPAR LCBRA CMDS RCBRA METODO RCBRA
Rule 2     METODO -> PUBLIC STATIC TIPO ID LPAR PARAMS RPAR LCBRA DC CMDS RETURN EXPRESSAO SEMICOLON RCBRA
Rule 3     METODO -> empty
Rule 4     PARAMS -> TIPO ID MAIS_PARAMS
Rule 5     PARAMS -> empty
Rule 6     MAIS_PARAMS -> VIRGU PARAMS
Rule 7     MAIS_PARAMS -> empty
Rule 8     DC -> VAR MAIS_DC
Rule 9     DC -> empty
Rule 10    MAIS_DC -> SEMICOLON DC
Rule 11    MAIS_DC -> empty
Rule 12    VAR -> TIPO VARS SEMICOLON
Rule 13    VARS -> ID MAIS_VAR
Rule 14    MAIS_VAR -> VIRGU VARS
Rule 15    MAIS_VAR -> empty
Rule 16    TIPO -> DOUBLE
Rule 17    CMDS -> CMD MAIS_CMDS
Rule 18    CMDS -> empty
Rule 19    MAIS_CMDS -> SEMICOLON CMDS
Rule 20    MAIS_CMDS -> empty
Rule 21    CMD -> IF LPAR CONDICAO RPAR LCBRA CMDS RCBRA PFALSA
Rule 22    CMD -> WHILE LPAR CONDICAO RPAR LCBRA CMDS RCBRA
Rule 23    CMD -> PRINT LPAR EXPRESSAO RPAR
Rule 24    CMD -> ID RESTO_IDENT
Rule 25    PFALSA -> ELSE LCBRA CMDS RCBRA
Rule 26    PFALSA -> empty
Rule 27    RESTO_IDENT -> IGUAL EXP_IDENT
Rule 28    RESTO_IDENT -> LPAR LISTA_ARG RPAR
Rule 29    CONDICAO -> EXPRESSAO IGUAL EXPRESSAO
Rule 30    CONDICAO -> EXPRESSAO MEN EXPRESSAO
Rule 31    CONDICAO -> EXPRESSAO MEN_IGUAL EXPRESSAO
Rule 32    CONDICAO -> EXPRESSAO MAI EXPRESSAO
Rule 33    CONDICAO -> EXPRESSAO MAI_IGUAL EXPRESSAO
Rule 34    CONDICAO -> EXPRESSAO DIF EXPRESSAO
Rule 35    CONDICAO -> NEG EXPRESSAO
Rule 36    LISTA_ARG -> ARGUMENTOS
Rule 37    LISTA_ARG -> empty
Rule 38    ARGUMENTOS -> ID MAIS_IDENT
Rule 39    ARGUMENTOS -> empty
Rule 40    MAIS_IDENT -> VIRGU ARGUMENTOS
Rule 41    MAIS_IDENT -> empty
Rule 42    EXP_IDENT -> EXPRESSAO
Rule 43    EXP_IDENT -> TERMO
Rule 44    EXPRESSAO -> TERMO OUTROS_TERMOS
Rule 45    TERMO -> OP_UN FATOR MAIS_FATORES
Rule 46    OP_UN -> MENOS
Rule 47    OP_UN -> empty
Rule 48    FATOR -> ID
Rule 49    FATOR -> DOUBLE
Rule 50    FATOR -> LPAR EXPRESSAO RPAR
Rule 51    OUTROS_TERMOS -> OP_AD TERMO OUTROS_TERMOS
Rule 52    OUTROS_TERMOS -> empty
Rule 53    OP_AD -> SUM
Rule 54    OP_AD -> MENOS
Rule 55    MAIS_FATORES -> OP_MUL FATOR MAIS_FATORES
Rule 56    MAIS_FATORES -> empty
Rule 57    OP_MUL -> MUL
Rule 58    OP_MUL -> DIVI
Rule 59    empty -> <empty>

Terminals, with rules where they appear

AND                  : 
ASSIGMENT            : 
BOOLEAN              : 
CLASS                : 1
COLON                : 
DEF                  : 
DIF                  : 34
DIVI                 : 58
DOUBLE               : 16 49
ELSE                 : 25
EXTENDS              : 
FALSE                : 
ID                   : 1 1 2 4 13 24 38 48
IF                   : 21
IGUAL                : 27 29
INT                  : 
LCBRA                : 1 1 2 21 22 25
LENGTH               : 
LPAR                 : 1 2 21 22 23 28 50
LSBRA                : 1
MAI                  : 32
MAIN                 : 1
MAI_IGUAL            : 33
MEN                  : 30
MENOS                : 46 54
MEN_IGUAL            : 31
MUL                  : 57
NEG                  : 35
NEW                  : 
NULL                 : 
NUMBER               : 
POINT                : 
PRINT                : 23
PUBLIC               : 1 1 2
RCBRA                : 1 1 2 21 22 25
RETURN               : 2
RPAR                 : 1 2 21 22 23 28 50
RSBRA                : 1
SEMICOLON            : 2 10 12 19
STATIC               : 1 2
STRING               : 1
SUM                  : 53
THIS                 : 
TRUE                 : 
VIRGU                : 6 14 40
VOID                 : 1
WHILE                : 22
error                : 

Nonterminals, with rules where they appear

ARGUMENTOS           : 36 40
CMD                  : 17
CMDS                 : 1 2 19 21 22 25
CONDICAO             : 21 22
DC                   : 2 10
EXPRESSAO            : 2 23 29 29 30 30 31 31 32 32 33 33 34 34 35 42 50
EXP_IDENT            : 27
FATOR                : 45 55
LISTA_ARG            : 28
MAIS_CMDS            : 17
MAIS_DC              : 8
MAIS_FATORES         : 45 55
MAIS_IDENT           : 38
MAIS_PARAMS          : 4
MAIS_VAR             : 13
METODO               : 1
OP_AD                : 51
OP_MUL               : 55
OP_UN                : 45
OUTROS_TERMOS        : 44 51
PARAMS               : 2 6
PFALSA               : 21
PROG                 : 0
RESTO_IDENT          : 24
TERMO                : 43 44 51
TIPO                 : 2 4 12
VAR                  : 8
VARS                 : 12 14
empty                : 3 5 7 9 11 15 18 20 26 37 39 41 47 52 56

Parsing method: LALR

state 0

    (0) S' -> . PROG
    (1) PROG -> . PUBLIC CLASS ID LCBRA PUBLIC STATIC VOID MAIN LPAR STRING LSBRA RSBRA ID RPAR LCBRA CMDS RCBRA METODO RCBRA

    PUBLIC          shift and go to state 2

    PROG                           shift and go to state 1

state 1

    (0) S' -> PROG .



state 2

    (1) PROG -> PUBLIC . CLASS ID LCBRA PUBLIC STATIC VOID MAIN LPAR STRING LSBRA RSBRA ID RPAR LCBRA CMDS RCBRA METODO RCBRA

    CLASS           shift and go to state 3


state 3

    (1) PROG -> PUBLIC CLASS . ID LCBRA PUBLIC STATIC VOID MAIN LPAR STRING LSBRA RSBRA ID RPAR LCBRA CMDS RCBRA METODO RCBRA

    ID              shift and go to state 4


state 4

    (1) PROG -> PUBLIC CLASS ID . LCBRA PUBLIC STATIC VOID MAIN LPAR STRING LSBRA RSBRA ID RPAR LCBRA CMDS RCBRA METODO RCBRA

    LCBRA           shift and go to state 5


state 5

    (1) PROG -> PUBLIC CLASS ID LCBRA . PUBLIC STATIC VOID MAIN LPAR STRING LSBRA RSBRA ID RPAR LCBRA CMDS RCBRA METODO RCBRA

    PUBLIC          shift and go to state 6


state 6

    (1) PROG -> PUBLIC CLASS ID LCBRA PUBLIC . STATIC VOID MAIN LPAR STRING LSBRA RSBRA ID RPAR LCBRA CMDS RCBRA METODO RCBRA

    STATIC          shift and go to state 7


state 7

    (1) PROG -> PUBLIC CLASS ID LCBRA PUBLIC STATIC . VOID MAIN LPAR STRING LSBRA RSBRA ID RPAR LCBRA CMDS RCBRA METODO RCBRA

    VOID            shift and go to state 8


state 8

    (1) PROG -> PUBLIC CLASS ID LCBRA PUBLIC STATIC VOID . MAIN LPAR STRING LSBRA RSBRA ID RPAR LCBRA CMDS RCBRA METODO RCBRA

    MAIN            shift and go to state 9


state 9

    (1) PROG -> PUBLIC CLASS ID LCBRA PUBLIC STATIC VOID MAIN . LPAR STRING LSBRA RSBRA ID RPAR LCBRA CMDS RCBRA METODO RCBRA

    LPAR            shift and go to state 10


state 10

    (1) PROG -> PUBLIC CLASS ID LCBRA PUBLIC STATIC VOID MAIN LPAR . STRING LSBRA RSBRA ID RPAR LCBRA CMDS RCBRA METODO RCBRA

    STRING          shift and go to state 11


state 11

    (1) PROG -> PUBLIC CLASS ID LCBRA PUBLIC STATIC VOID MAIN LPAR STRING . LSBRA RSBRA ID RPAR LCBRA CMDS RCBRA METODO RCBRA

    LSBRA           shift and go to state 12


state 12

    (1) PROG -> PUBLIC CLASS ID LCBRA PUBLIC STATIC VOID MAIN LPAR STRING LSBRA . RSBRA ID RPAR LCBRA CMDS RCBRA METODO RCBRA

    RSBRA           shift and go to state 13


state 13

    (1) PROG -> PUBLIC CLASS ID LCBRA PUBLIC STATIC VOID MAIN LPAR STRING LSBRA RSBRA . ID RPAR LCBRA CMDS RCBRA METODO RCBRA

    ID              shift and go to state 14


state 14

    (1) PROG -> PUBLIC CLASS ID LCBRA PUBLIC STATIC VOID MAIN LPAR STRING LSBRA RSBRA ID . RPAR LCBRA CMDS RCBRA METODO RCBRA

    RPAR            shift and go to state 15


state 15

    (1) PROG -> PUBLIC CLASS ID LCBRA PUBLIC STATIC VOID MAIN LPAR STRING LSBRA RSBRA ID RPAR . LCBRA CMDS RCBRA METODO RCBRA

    LCBRA           shift and go to state 16


state 16

    (1) PROG -> PUBLIC CLASS ID LCBRA PUBLIC STATIC VOID MAIN LPAR STRING LSBRA RSBRA ID RPAR LCBRA . CMDS RCBRA METODO RCBRA
    (17) CMDS -> . CMD MAIS_CMDS
    (18) CMDS -> . empty
    (21) CMD -> . IF LPAR CONDICAO RPAR LCBRA CMDS RCBRA PFALSA
    (22) CMD -> . WHILE LPAR CONDICAO RPAR LCBRA CMDS RCBRA
    (23) CMD -> . PRINT LPAR EXPRESSAO RPAR
    (24) CMD -> . ID RESTO_IDENT
    (59) empty -> .

    IF              shift and go to state 21
    WHILE           shift and go to state 22
    PRINT           shift and go to state 23
    ID              shift and go to state 17
    RCBRA           reduce using rule 59 (empty -> .)

    CMDS                           shift and go to state 18
    CMD                            shift and go to state 19
    empty                          shift and go to state 20

state 17

    (24) CMD -> ID . RESTO_IDENT
    (27) RESTO_IDENT -> . IGUAL EXP_IDENT
    (28) RESTO_IDENT -> . LPAR LISTA_ARG RPAR

    IGUAL           shift and go to state 25
    LPAR            shift and go to state 26

    RESTO_IDENT                    shift and go to state 24

state 18

    (1) PROG -> PUBLIC CLASS ID LCBRA PUBLIC STATIC VOID MAIN LPAR STRING LSBRA RSBRA ID RPAR LCBRA CMDS . RCBRA METODO RCBRA

    RCBRA           shift and go to state 27


state 19

    (17) CMDS -> CMD . MAIS_CMDS
    (19) MAIS_CMDS -> . SEMICOLON CMDS
    (20) MAIS_CMDS -> . empty
    (59) empty -> .

    SEMICOLON       shift and go to state 29
    RCBRA           reduce using rule 59 (empty -> .)
    RETURN          reduce using rule 59 (empty -> .)

    MAIS_CMDS                      shift and go to state 28
    empty                          shift and go to state 30

state 20

    (18) CMDS -> empty .

    RCBRA           reduce using rule 18 (CMDS -> empty .)
    RETURN          reduce using rule 18 (CMDS -> empty .)


state 21

    (21) CMD -> IF . LPAR CONDICAO RPAR LCBRA CMDS RCBRA PFALSA

    LPAR            shift and go to state 31


state 22

    (22) CMD -> WHILE . LPAR CONDICAO RPAR LCBRA CMDS RCBRA

    LPAR            shift and go to state 32


state 23

    (23) CMD -> PRINT . LPAR EXPRESSAO RPAR

    LPAR            shift and go to state 33


state 24

    (24) CMD -> ID RESTO_IDENT .

    SEMICOLON       reduce using rule 24 (CMD -> ID RESTO_IDENT .)
    RCBRA           reduce using rule 24 (CMD -> ID RESTO_IDENT .)
    RETURN          reduce using rule 24 (CMD -> ID RESTO_IDENT .)


state 25

    (27) RESTO_IDENT -> IGUAL . EXP_IDENT
    (42) EXP_IDENT -> . EXPRESSAO
    (43) EXP_IDENT -> . TERMO
    (44) EXPRESSAO -> . TERMO OUTROS_TERMOS
    (45) TERMO -> . OP_UN FATOR MAIS_FATORES
    (46) OP_UN -> . MENOS
    (47) OP_UN -> . empty
    (59) empty -> .

    MENOS           shift and go to state 38
    ID              reduce using rule 59 (empty -> .)
    DOUBLE          reduce using rule 59 (empty -> .)
    LPAR            reduce using rule 59 (empty -> .)

    EXP_IDENT                      shift and go to state 34
    EXPRESSAO                      shift and go to state 35
    TERMO                          shift and go to state 36
    OP_UN                          shift and go to state 37
    empty                          shift and go to state 39

state 26

    (28) RESTO_IDENT -> LPAR . LISTA_ARG RPAR
    (36) LISTA_ARG -> . ARGUMENTOS
    (37) LISTA_ARG -> . empty
    (38) ARGUMENTOS -> . ID MAIS_IDENT
    (39) ARGUMENTOS -> . empty
    (59) empty -> .

    ID              shift and go to state 43
    RPAR            reduce using rule 59 (empty -> .)

    LISTA_ARG                      shift and go to state 40
    ARGUMENTOS                     shift and go to state 41
    empty                          shift and go to state 42

state 27

    (1) PROG -> PUBLIC CLASS ID LCBRA PUBLIC STATIC VOID MAIN LPAR STRING LSBRA RSBRA ID RPAR LCBRA CMDS RCBRA . METODO RCBRA
    (2) METODO -> . PUBLIC STATIC TIPO ID LPAR PARAMS RPAR LCBRA DC CMDS RETURN EXPRESSAO SEMICOLON RCBRA
    (3) METODO -> . empty
    (59) empty -> .

    PUBLIC          shift and go to state 44
    RCBRA           reduce using rule 59 (empty -> .)

    METODO                         shift and go to state 45
    empty                          shift and go to state 46

state 28

    (17) CMDS -> CMD MAIS_CMDS .

    RCBRA           reduce using rule 17 (CMDS -> CMD MAIS_CMDS .)
    RETURN          reduce using rule 17 (CMDS -> CMD MAIS_CMDS .)


state 29

    (19) MAIS_CMDS -> SEMICOLON . CMDS
    (17) CMDS -> . CMD MAIS_CMDS
    (18) CMDS -> . empty
    (21) CMD -> . IF LPAR CONDICAO RPAR LCBRA CMDS RCBRA PFALSA
    (22) CMD -> . WHILE LPAR CONDICAO RPAR LCBRA CMDS RCBRA
    (23) CMD -> . PRINT LPAR EXPRESSAO RPAR
    (24) CMD -> . ID RESTO_IDENT
    (59) empty -> .

    IF              shift and go to state 21
    WHILE           shift and go to state 22
    PRINT           shift and go to state 23
    ID              shift and go to state 17
    RCBRA           reduce using rule 59 (empty -> .)
    RETURN          reduce using rule 59 (empty -> .)

    CMDS                           shift and go to state 47
    CMD                            shift and go to state 19
    empty                          shift and go to state 20

state 30

    (20) MAIS_CMDS -> empty .

    RCBRA           reduce using rule 20 (MAIS_CMDS -> empty .)
    RETURN          reduce using rule 20 (MAIS_CMDS -> empty .)


state 31

    (21) CMD -> IF LPAR . CONDICAO RPAR LCBRA CMDS RCBRA PFALSA
    (29) CONDICAO -> . EXPRESSAO IGUAL EXPRESSAO
    (30) CONDICAO -> . EXPRESSAO MEN EXPRESSAO
    (31) CONDICAO -> . EXPRESSAO MEN_IGUAL EXPRESSAO
    (32) CONDICAO -> . EXPRESSAO MAI EXPRESSAO
    (33) CONDICAO -> . EXPRESSAO MAI_IGUAL EXPRESSAO
    (34) CONDICAO -> . EXPRESSAO DIF EXPRESSAO
    (35) CONDICAO -> . NEG EXPRESSAO
    (44) EXPRESSAO -> . TERMO OUTROS_TERMOS
    (45) TERMO -> . OP_UN FATOR MAIS_FATORES
    (46) OP_UN -> . MENOS
    (47) OP_UN -> . empty
    (59) empty -> .

    NEG             shift and go to state 50
    MENOS           shift and go to state 38
    ID              reduce using rule 59 (empty -> .)
    DOUBLE          reduce using rule 59 (empty -> .)
    LPAR            reduce using rule 59 (empty -> .)

    CONDICAO                       shift and go to state 48
    EXPRESSAO                      shift and go to state 49
    TERMO                          shift and go to state 51
    OP_UN                          shift and go to state 37
    empty                          shift and go to state 39

state 32

    (22) CMD -> WHILE LPAR . CONDICAO RPAR LCBRA CMDS RCBRA
    (29) CONDICAO -> . EXPRESSAO IGUAL EXPRESSAO
    (30) CONDICAO -> . EXPRESSAO MEN EXPRESSAO
    (31) CONDICAO -> . EXPRESSAO MEN_IGUAL EXPRESSAO
    (32) CONDICAO -> . EXPRESSAO MAI EXPRESSAO
    (33) CONDICAO -> . EXPRESSAO MAI_IGUAL EXPRESSAO
    (34) CONDICAO -> . EXPRESSAO DIF EXPRESSAO
    (35) CONDICAO -> . NEG EXPRESSAO
    (44) EXPRESSAO -> . TERMO OUTROS_TERMOS
    (45) TERMO -> . OP_UN FATOR MAIS_FATORES
    (46) OP_UN -> . MENOS
    (47) OP_UN -> . empty
    (59) empty -> .

    NEG             shift and go to state 50
    MENOS           shift and go to state 38
    ID              reduce using rule 59 (empty -> .)
    DOUBLE          reduce using rule 59 (empty -> .)
    LPAR            reduce using rule 59 (empty -> .)

    CONDICAO                       shift and go to state 52
    EXPRESSAO                      shift and go to state 49
    TERMO                          shift and go to state 51
    OP_UN                          shift and go to state 37
    empty                          shift and go to state 39

state 33

    (23) CMD -> PRINT LPAR . EXPRESSAO RPAR
    (44) EXPRESSAO -> . TERMO OUTROS_TERMOS
    (45) TERMO -> . OP_UN FATOR MAIS_FATORES
    (46) OP_UN -> . MENOS
    (47) OP_UN -> . empty
    (59) empty -> .

    MENOS           shift and go to state 38
    ID              reduce using rule 59 (empty -> .)
    DOUBLE          reduce using rule 59 (empty -> .)
    LPAR            reduce using rule 59 (empty -> .)

    EXPRESSAO                      shift and go to state 53
    TERMO                          shift and go to state 51
    OP_UN                          shift and go to state 37
    empty                          shift and go to state 39

state 34

    (27) RESTO_IDENT -> IGUAL EXP_IDENT .

    SEMICOLON       reduce using rule 27 (RESTO_IDENT -> IGUAL EXP_IDENT .)
    RCBRA           reduce using rule 27 (RESTO_IDENT -> IGUAL EXP_IDENT .)
    RETURN          reduce using rule 27 (RESTO_IDENT -> IGUAL EXP_IDENT .)


state 35

    (42) EXP_IDENT -> EXPRESSAO .

    SEMICOLON       reduce using rule 42 (EXP_IDENT -> EXPRESSAO .)
    RCBRA           reduce using rule 42 (EXP_IDENT -> EXPRESSAO .)
    RETURN          reduce using rule 42 (EXP_IDENT -> EXPRESSAO .)


state 36

    (43) EXP_IDENT -> TERMO .
    (44) EXPRESSAO -> TERMO . OUTROS_TERMOS
    (51) OUTROS_TERMOS -> . OP_AD TERMO OUTROS_TERMOS
    (52) OUTROS_TERMOS -> . empty
    (53) OP_AD -> . SUM
    (54) OP_AD -> . MENOS
    (59) empty -> .

  ! reduce/reduce conflict for SEMICOLON resolved using rule 43 (EXP_IDENT -> TERMO .)
  ! reduce/reduce conflict for RCBRA resolved using rule 43 (EXP_IDENT -> TERMO .)
  ! reduce/reduce conflict for RETURN resolved using rule 43 (EXP_IDENT -> TERMO .)
    SEMICOLON       reduce using rule 43 (EXP_IDENT -> TERMO .)
    RCBRA           reduce using rule 43 (EXP_IDENT -> TERMO .)
    RETURN          reduce using rule 43 (EXP_IDENT -> TERMO .)
    SUM             shift and go to state 57
    MENOS           shift and go to state 58

  ! SEMICOLON       [ reduce using rule 59 (empty -> .) ]
  ! RCBRA           [ reduce using rule 59 (empty -> .) ]
  ! RETURN          [ reduce using rule 59 (empty -> .) ]

    OUTROS_TERMOS                  shift and go to state 54
    OP_AD                          shift and go to state 55
    empty                          shift and go to state 56

state 37
